Fix hamburger button transition not working on firefox and ios

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -205,13 +205,13 @@ header {
 .nav-toggler .line {
   fill: var(--color-primary);
   transition: fill 200ms ease-in-out, y 200ms ease-in 200ms,
-    rotate 200ms ease-in, opacity 0ms 200ms;
+    transform 200ms ease-in, opacity 0ms 200ms;
   transform-origin: center;
 }
 
 .nav-toggler .line.open {
   transition: fill 200ms ease-in-out, y 200ms ease-in,
-    rotate 200ms ease-in 200ms, opacity 0ms 200ms;
+    transform 200ms ease-in 200ms, opacity 0ms 200ms;
 }
 
 .main-nav.floating .line {
@@ -223,15 +223,15 @@ header {
 }
 
 .nav-toggler :is(.line-top.open, .line-bottom.open) {
-  y: 45;
+  y: 45px;
 }
 
 .nav-toggler .line-top.open {
-  rotate: 45deg;
+  transform: rotate(45deg);
 }
 
 .nav-toggler .line-bottom.open {
-  rotate: -45deg;
+  transform: rotate(-45deg);
 }
 
 .nav-toggler .line-middle.open {
